# FireFly

firefly/: Cargo.toml  README.md
firefly/.cargo/: config.toml
firefly/src/: app.rs  config.rs  main.rs  types.rs
firefly/src/board/: clocks.rs  i2c_bus.rs  mod.rs  pins.rs  pwm.rs  spi_bus.rs  uart.rs
firefly/src/comms/: logging.rs  mavlink.rs  mod.rs  radio.rs  telemetry.rs
firefly/src/control/: altitude_controller.rs  attitude_controller.rs  mixer.rs  mod.rs  pid.rs  rate_controller.rs
firefly/src/drivers/: barometer.rs  battery.rs  gps.rs  imu.rs  mod.rs  motor_output.rs  rc_input.rs
firefly/src/estimator/: altitude.rs  attitude.rs  mod.rs  state.rs
firefly/src/flight/: arming.rs  commander.rs  mission.rs  mod.rs  modes.rs
firefly/src/safety/: failsafe.rs  geofence.rs  health.rs  mod.rs  watchdog.rs
firefly/src/tasks/: control_task.rs  mod.rs  motor_task.rs  safety_task.rs  sensor_task.rs  telemetry_task.rs
